# open-lassion-cases

./: README.md
All_QML/: CustomButton.qml  WavySlider.qml
case1/: CMakeLists.txt
case1/qml/: Main.qml  PlaybackButton.qml
case1/src/: main.cpp  videobackend.cpp  videobackend.h  videoitem.h
case2/: CMakeLists.txt
case2/qml/: Main.qml
case2/src/: main.cpp  videobackend.cpp  videobackend.h  videoitem.h
case3/: CMakeLists.txt
case3/qml/: Main.qml
case3/src/: main.cpp  videobackend.cpp  videobackend.h  videoitem.h
case4/: CMakeLists.txt
case4/qml/: Main.qml
case4/src/: videobackend.cpp  videobackend.h  videoitem.h
case5/: CMakeLists.txt
case5/qml/: Main.qml
case5/src/: main.cpp  videobackend.cpp  videobackend.h  videoitem.h
case6/: CMakeLists.txt
case6/qml/: Main.qml
case6/src/: videobackend.cpp  videobackend.h
